# SUPER-HACKS

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  reminder_cron.py  requirements.txt
.github/workflows/: deploy-backend.yaml
Agentic/: auth.py  create_agents.py  prism.json  prompts.py
Agentic/Workflow_ec2/: k.py  oth_tools.py  run.py  start_flow.py
Agentic/tools/: composio.json  custom_tools.json  custom_tools.py  dashboard.py  dynamo.py  googlE.py  llm.py  md_to_pdf.py  rag.py  reminders.py  specific_func.py  tool_classes.py  whatsapp.py
