[project]
name = "sigmoyd-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "boto3>=1.40.44",
    "bs4>=0.0.2",
    "celery>=5.5.3",
    "chromadb>=1.1.0",
    "clerk==0.1.0",
    "clerk-backend-api==1.6.0",
    "composio-core==0.7.4",
    "composio-langchain==0.7.4",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.118.0",
    "google-api-python-client>=2.184.0",
    "google-auth-oauthlib>=1.2.2",
    "groq>=0.32.0",
    "gunicorn>=23.0.0",
    "jose>=1.0.0",
    "langchain==0.3.17",
    "langchain-core==0.3.60",
    "langchain-google-genai==2.0.7",
    "markdown>=3.9",
    "matplotlib>=3.10.6",
    "numpy>=1.26.4",
    "openai>=1.109.1",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "protobuf>=5.29.5",
    "pydantic==2.10.6",
    "pydub==0.24.1",
    "pypdf2==3.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-jose==3.3.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "razorpay>=2.0.0",
    "redis>=6.4.0",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "s3fs>=0.4.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "selenium>=4.36.0",
    "speechrecognition>=3.14.3",
    "starlette>=0.48.0",
    "webdriver-manager>=4.0.2",
]
